--- a/render.yaml
+++ b/render.yaml
@@ -1,8 +1,7 @@
 services:
   - type: web
-    name: car_price_estimator
+    name: car-price-estimator
     env: python
-    plan: free
-    branch: main
+    rootDir: .
     buildCommand: pip install -r requirements.txt
     startCommand: python app.py
